refactor(backend): adapt auth endpoints responses
